--- a/Views/Func/Create.cshtml
+++ b/Views/Func/Create.cshtml
@@ -18,8 +18,15 @@
                 <span asp-validation-for="Name" class="text-danger"></span>
             </div>
             <div class="form-group">
-                <input type="button" value="Criar" class="btn btn-primary" />
+                <label asp-for="Setor" class="control-label">Setor</label>
+                <select asp-for="Setor.Id" class="form-control" asp-items="ViewBag.Areas">
+                    <option value="">Selecione uma área</option>
+                </select>
+                <span asp-validation-for="Setor" class="text-danger"></span>
+                <button type="button" class="btn btn-primary">Criar</button>
+
             </div>
+
         </form>
     </div>
 </div>
