Banco de dados populados area e func

--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -24,10 +24,10 @@
                             <span class="visually-hidden"</span>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link active" asp-area="" asp-controller="Home" asp-action="Func">Funcionários</a>
+                            <a class="nav-link active" asp-area="" asp-controller="Func" asp-action="Index">Funcionários</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link active" asp-area="" asp-controller="Home" asp-action="Area">Setores</a>
+                            <a class="nav-link active" asp-area="" asp-controller="Area" asp-action="Index">Setores</a>
                         </li>
                         <li class="nav-item">
                             <a class="nav-link active" asp-area="" asp-controller="Home" asp-action="Calendario">Calendário</a>
@@ -45,7 +45,7 @@
 
     <footer class="border-top footer text-muted">
         <div class="container">
-            &copy; 2024 - EscalaWebMvc - <a asp-area="" asp-controller="Home" asp-action="Privacy">Privacy</a>
+            &copy; 2024 - EscalaWebMvc - <a asp-area="" asp-controller="Home" asp-action="Calendario">Calendario</a>
         </div>
     </footer>
     <script src="~/lib/jquery/dist/jquery.min.js"></script>
