--- a/Views/Area/Delete.cshtml
+++ b/Views/Area/Delete.cshtml
@@ -1,4 +1,4 @@
-﻿@model EscalaWebMvc.Models.Func
+﻿@model EscalaWebMvc.Models.Area
 
 @{
     ViewData["Title"] = "Delete";
@@ -6,16 +6,16 @@
 
 <h1>Apagar</h1>
 
-<h3>Tem certeza que quer excluir este funcionário?</h3>
+<h3>Você tem certeza que quer apagar este setor?</h3>
 <div>
-    <h4>Funcionário</h4>
+    <h4>Area</h4>
     <hr />
     <dl class="row">
         <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.Name)
+            @Html.DisplayNameFor(model => model.Zona)
         </dt>
         <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.Name)
+            @Html.DisplayFor(model => model.Zona)
         </dd>
     </dl>
     
