--- a/Views/Func/Create.cshtml
+++ b/Views/Func/Create.cshtml
@@ -18,12 +18,12 @@
                 <span asp-validation-for="Name" class="text-danger"></span>
             </div>
             <div class="form-group">
-                <label asp-for="Setor" class="control-label">Setor</label>
-                <select asp-for="Setor.Id" class="form-control" asp-items="ViewBag.Areas">
+                <label asp-for="SetorId" class="control-label">Setor</label>
+                <select asp-for="SetorId" class="form-control" asp-items="ViewBag.Areas">
                     <option value="">Selecione uma área</option>
                 </select>
-                <span asp-validation-for="Setor" class="text-danger"></span>
-                <button type="button" class="btn btn-primary">Criar</button>
+                <span asp-validation-for="SetorId" class="text-danger"></span>
+                <button type="submit" class="btn btn-primary">Criar</button>
 
             </div>
 
