Logica teste e func/set banco ok

--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -20,7 +20,7 @@
                 <div class="collapse navbar-collapse" id="navbarColor01">
                     <ul class="navbar-nav me-auto">
                         <li class="nav-item">
-                            <a class="nav-link active" asp-area="" asp-controller="Home" asp-action="Index">Home</a>
+                            <a class="nav-link active" asp-area="" asp-controller="Escala" asp-action="Index">Home</a>
                             <span class="visually-hidden"</span>
                         </li>
                         <li class="nav-item">
@@ -30,7 +30,7 @@
                             <a class="nav-link active" asp-area="" asp-controller="Area" asp-action="Index">Setores</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link active" asp-area="" asp-controller="Home" asp-action="Calendario">Calendário</a>
+                            <a class="nav-link active" asp-area="" asp-controller="Calendario" asp-action="Index">Calendário</a>
                         </li>
                     </ul>
                 </div>
