--- a/Views/Func/Details.cshtml
+++ b/Views/Func/Details.cshtml
@@ -1,7 +1,7 @@
 ﻿@model EscalaWebMvc.Models.Func
 
 @{
-    ViewData["Title"] = "Details";
+    ViewData["Title"] = "Detalhes do Funcionário";
 }
 
 <h1>Detalhes</h1>
@@ -10,15 +10,22 @@
     <h4>Funcionário</h4>
     <hr />
     <dl class="row">
-        <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.Name)
+        <dt class="col-sm-2">
+            Nome
         </dt>
-        <dd class = "col-sm-10">
+        <dd class="col-sm-10">
             @Html.DisplayFor(model => model.Name)
+        </dd>
+
+        <dt class="col-sm-2">
+            Setor
+        </dt>
+        <dd class="col-sm-10">
+            @Model.Setor?.Zona 
         </dd>
     </dl>
 </div>
 <div>
-    <a asp-action="Edit" asp-route-id="@Model?.Id">Edit</a> |
+    <a asp-action="Edit" asp-route-id="@Model?.Id">Editar</a> |
     <a asp-action="Index">Voltar para lista</a>
 </div>
