--- a/wwwroot/css/site.css
+++ b/wwwroot/css/site.css
@@ -20,3 +20,18 @@ html {
 body {
   margin-bottom: 60px;
 }
+
+.calendar-container {
+    position: relative;
+    padding: 20px;
+}
+
+    .calendar-container .btn {
+        width: 50px;
+        height: 50px;
+        border-radius: 50%;
+        font-size: 20px;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+    }
